Fixed month list overflow which was braking stuff

--- a/src/Month/Month.scss
+++ b/src/Month/Month.scss
@@ -6,7 +6,6 @@
   //display: flex;
   //flex: 0 1 100%;
   //flex-direction: row;
-  overflow: hidden;
 }
 .rows {
   position: relative;
